--- a/my_env.ipynb
+++ b/my_env.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "93f853bc",
    "metadata": {},
    "outputs": [
@@ -16,6 +16,7 @@
     }
    ],
    "source": [
+    "# Testing Imports \n",
     "import pandas as pd\n",
     "import librosa\n",
     "print(\"Pandas version:\", pd.__version__)\n",
