--- a/features_extracter.ipynb
+++ b/features_extracter.ipynb
@@ -70,31 +70,22 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import os \n",
+    "import os\n",
+    "from pathlib import Path\n",
     "import librosa           \n",
-    "import librosa.display   \n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold \n",
-    "from sklearn.preprocessing import StandardScaler, LabelEncoder \n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC                   \n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier \n",
-    "from sklearn.tree import DecisionTreeClassifier \n",
-    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix \n",
-    "import matplotlib.pyplot as plt \n",
-    "import seaborn as sns    \n",
+    "import librosa.display     \n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')       \n",
     "\n",
-    "base_path = \"C:/Users/anish/OneDrive/Desktop/ML/MusicClassifier/Data/genres_original\" # Need to change so everyone can use it \n",
-    "all_files = os.listdir(base_path)\n",
+    "base_path = Path.cwd()\n",
+    "all_files = base_path/\"Data\"/\"genres_original\"\n",
     "list_of_rows  = []\n",
-    "for genre_folder in all_files:\n",
-    "    genre_path = os.path.join(base_path, genre_folder) # ensures correct destination for windows/mac\n",
-    "    songs = os.listdir(genre_path)\n",
-    "    for song in songs:\n",
+    "for genre_folder in all_files.iterdir():\n",
+    "    genre_path = all_files/genre_folder\n",
+    "    genre_name = genre_folder.name\n",
+    "    for song in genre_path.iterdir():\n",
     "        try:\n",
-    "            song_path = os.path.join(genre_path, song)\n",
+    "            song_path = genre_path/song\n",
     "            y, sr = librosa.load(song_path, sr=None, mono=True) # Mono ensures only 1 signal is accepted so only 1D array is created\n",
     "            zcr = librosa.feature.zero_crossing_rate(y)\n",
     "            zcr_mean = np.mean(zcr)\n",
@@ -102,7 +93,7 @@
     "            spectral_centroid = librosa.feature.spectral_centroid(y=y, sr=sr)\n",
     "            sc_mean = np.mean(spectral_centroid)\n",
     "            sc_sd = np.std(spectral_centroid)\n",
-    "            new_row = {'Genre': genre_folder ,'ZCR Mean':zcr_mean, 'ZCR STD': zcr_sd, 'Spectral Centroid Mean':sc_mean,\n",
+    "            new_row = {'Genre': genre_name ,'ZCR Mean':zcr_mean, 'ZCR STD': zcr_sd, 'Spectral Centroid Mean':sc_mean,\n",
     "                       'Spectral Centroid STD': sc_sd}\n",
     "            mfccs = librosa.feature.mfcc(y=y, sr=sr, n_mfcc=40,n_fft=256, n_mels=40)\n",
     "            for i in range(len(mfccs)):\n",
