--- a/eda.ipynb
+++ b/eda.ipynb
@@ -209,6 +209,11 @@
     "plt.show()\n",
     "features.describe().T ## flip it to show features as columns and stats as rows for better readability\n",
     "\n",
+    "\n",
+    "# Dark Purple/Black = Strong Negative (-1.0 to -0.5)\n",
+    "# Red/Pink = Weak/No correlation (-0.5 to +0.5)  \n",
+    "# Orange/Yellow = Moderate Positive (+0.5 to +0.8)\n",
+    "# White = Strong Positive (+0.8 to +1.0)\n",
     "plt.figure(figsize=(12,8))\n",
     "sns.heatmap(features.corr(numeric_only=True), cmap='rocket', cbar=True)\n",
     "plt.show()\n",
@@ -226,13 +231,20 @@
     "plt.xticks(rotation=45)\n",
     "plt.show()\n",
     "\n",
-    "## Observations:\n",
-    "## Dataset is balanced and training is easier\n",
-    "## No impossible values observed such as negative Spectral Centroid value because it is the average of positive audio frequencies\n",
+    "## Key Observations:\n",
+    "## No null values observed in any column\n",
+    "## Dataset is balanced and each genre is represented equally (100 songs per genre)\n",
+    "## MFCCs are highly correlated as epxected\n",
+    "## ZCR and Spectral Centroid show different patterns\n",
     "## No observed highly correlated features to be combined\n",
-    "## ADD MORE OBSERVATIONS\n",
-    "\n",
-    "\n"
+    "## MFCC seperates genres the most\n",
+    "## Distinct clusters are visible for each genre\n",
+    "## Blues and Country have very highly overlapping features as expected\n",
+    "## Jazz, Hiphop and Pop have  highly overlapping features as expected\n",
+    "## No obvious data errors or impossible values such as negative Spectral Centroid value (it is the average of positive audio frequencies)\n",
+    "## Spectral Centroid and MFCC DIstribution have reasonable ranges and and clear peaks\n",
+    "## ZCR Distribution is right-skewed and might need log tranformation\n",
+    "## Each genre box is appreciably in a different region from the others"
    ]
   }
  ],
