--- a/eda.ipynb
+++ b/eda.ipynb
@@ -234,13 +234,13 @@
     "## Key Observations:\n",
     "## No null values observed in any column\n",
     "## Dataset is balanced and each genre is represented equally (100 songs per genre)\n",
-    "## MFCCs are highly correlated as epxected\n",
+    "## MFCCs are highly correlated as expected\n",
     "## ZCR and Spectral Centroid show different patterns\n",
-    "## No observed highly correlated features to be combined\n",
-    "## MFCC seperates genres the most\n",
+    "## No observed extremely correlated features to be combined\n",
+    "## MFCC feature seperates genres the most\n",
     "## Distinct clusters are visible for each genre\n",
     "## Blues and Country have very highly overlapping features as expected\n",
-    "## Jazz, Hiphop and Pop have  highly overlapping features as expected\n",
+    "## Jazz, Hiphop and Pop have highly overlapping features as expected\n",
     "## No obvious data errors or impossible values such as negative Spectral Centroid value (it is the average of positive audio frequencies)\n",
     "## Spectral Centroid and MFCC DIstribution have reasonable ranges and and clear peaks\n",
     "## ZCR Distribution is right-skewed and might need log tranformation\n",
