--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "\n",
     "## Observations\n",
-    "# The accuracy score is 69& and within the expected range of 50-70% for GTZAN Music Dataset predicted using Logisitic Regression\n",
+    "# The accuracy score is 69% and within the expected range of 50-70% for GTZAN Music Dataset predicted using Logisitic Regression\n",
     "# The overall prediction is 6.9x above random chance of 10% \n",
     "# The diagonal line of the confusion matrix shows each genre with 10 or more correct predicitions\n",
     "# Classical, Jazz and Metal have the highest number of correct predictions\n",
