--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -48,7 +48,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt \n",
     "import seaborn as sns \n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold \n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder \n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix   \n",
