--- a/features_extracter.ipynb
+++ b/features_extracter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "de13a024",
    "metadata": {},
    "outputs": [
@@ -24,6 +24,8 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')       \n",
     "\n",
+    "\n",
+    "## Extraction of audio features\n",
     "base_path = Path.cwd()\n",
     "all_files = base_path/\"Data\"/\"genres_original\"\n",
     "list_of_rows  = []\n",
@@ -56,6 +58,7 @@
     "            print(e)\n",
     "            continue\n",
     "\n",
+    "## Creating a dataframe with the extracted features\n",
     "music_analytics = pd.DataFrame(list_of_rows)\n",
     "music_analytics.to_csv('features.txt', sep='\\t', index=False)\n",
     "\n",
