--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -98,9 +98,7 @@
     "# Hiphop gets confused with Reggae and Pop as expected\n",
     "# Disco gets confused with Rock as expected\n",
     "# Reggae gets confused with Country as expected\n",
-    "# Rock gets confused with Disco and Country as expected\n",
-    "\n",
-    "\n"
+    "# Rock gets confused with Disco and Country as expected\n"
    ]
   }
  ],
